fix: изменил метод удаления первого элемента